--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f1521a30a2.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Personal</title>
 </head>
 <body>
@@ -200,7 +200,7 @@
 
     </div>
   </section>
-<script src="CSS/script.js"></script>
+<script src="script.js"></script>
 
 
 <!-- section 4 end -->
